# Opengl-project

./: 7.4.camera.fs  7.4.camera.vs  CMakeLists.txt  camera.h  glad.c  main.cpp  shader_s.h  stb_image.h
include/glad/: glad.h
